--- a/Domestic Box Office Collection/dom_open_day.html
+++ b/Domestic Box Office Collection/dom_open_day.html
@@ -61,7 +61,7 @@
 				<table class="tab12">
 					<thead>
 						<tr>
-							<th scope="col" scope="row" valign="middle" class="ww"><a href="#">Rank</a></th>
+							<th scope="col" scope="row" valign="middle" class="ww"><a href="">Rank</a></th>
 							<th scope="col" valign="middle" class="ww "><a href="">Poster</a></th>
 							<th scope="col" valign="middle" class="ww"><a href="">Movie Name</a></th>
 							<th scope="col" valign="middle" class="ww"><a href="../calender.html">Release Date</a></th>
@@ -111,7 +111,7 @@
 				<div class="wrp">
 					<div class="row">
 						<div class="col">
-							<a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+							<a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
 										src="images/ramp.jpg" width='70' height='90' /></noscript><img
 									class="lazyloaded" src="../images/war.jpg" data-src="images/ramp.jpg" width="70"
 									height="90"></a>
@@ -121,7 +121,7 @@
 										class="sx">War</b></a><br>
 								<a href="../calender.html"><b>Release Date:</a></b>&nbsp;&nbsp;1 Jan 2021<br>
 								<a href="../screen.html"><b>No. of Screens:</b></a>&nbsp;&nbsp;4200<br>
-								<a href="Domestic Box Office Collection/dom_open_day.html"><b>Opening
+								<a href="dom_open_day.html"><b>Opening
 										Day:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62 Cr
 							</p>
 						</div>
@@ -129,7 +129,7 @@
 					<hr>
 					<div class="row">
 						<div class="col">
-							<a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+							<a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
 										src="images/ramp.jpg" width='70' height='90' /></noscript><img
 									class="lazyloaded" src="../images/thugs.jpg" data-src="images/ramp.jpg" width="70"
 									height="90"></a>
@@ -139,7 +139,7 @@
 										Of Hindustan</b></a><br>
 								<a href="../calender.html"><b>Release Date:</a></b>&nbsp;&nbsp;8 Oct 2018<br>
 								<a href="../screen.html"><b>No. of Screens:</b></a>&nbsp;&nbsp;4200<br>
-								<a href="Domestic Box Office Collection/dom_open_day.html"><b>Opening
+								<a href="dom_open_day.html"><b>Opening
 										Day:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62 Cr
 							</p>
 						</div>
@@ -147,7 +147,7 @@
 					<hr>
 					<div class="row">
 						<div class="col">
-							<a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+							<a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
 										src="images/ramp.jpg" width='70' height='90' /></noscript><img
 									class="lazyloaded" src="../images/bharat.jpg" data-src="images/ramp.jpg" width="70"
 									height="90"></a>
@@ -157,7 +157,7 @@
 										class="sx">Bharat</b></a><br>
 								<a href="../calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;5 June 2019<br>
 								<a href="../screen.html"><b>No. of Screens:</b></a>&nbsp;&nbsp;4200<br>
-								<a href="Domestic Box Office Collection/dom_open_day.html"><b>Opening
+								<a href="dom_open_day.html"><b>Opening
 										Day:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62 Cr
 							</p>
 						</div>
@@ -165,7 +165,7 @@
 					<hr>
 					<div class="row">
 						<div class="col">
-							<a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+							<a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
 										src="images/ramp.jpg" width='70' height='90' /></noscript><img
 									class="lazyloaded" src="../images/simmba.jpg" data-src="images/ramp.jpg" width="70"
 									height="90"></a>
@@ -175,7 +175,7 @@
 										class="sx">War</b></a><br>
 								<a href="../calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;1 Jan 2021<br>
 								<a href="../screen.html"><b>No. of Screens:</b></a>&nbsp;&nbsp;4200<br>
-								<a href="Domestic Box Office Collection/dom_open_day.html"><b>Opening
+								<a href="dom_open_day.html"><b>Opening
 										Day:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62 Cr
 							</p>
 						</div>
@@ -219,6 +219,7 @@
 				<ul class="icons">
 					<li><a href="http://twitter.com/VivekChoubeyyy" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="https://www.facebook.com/iVivekChoubey" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="#" class="icon fa-youtube"><span class="label">Youtube</span></a></li>
 					<li><a href="http://instagram.com/vivekchoubeyy" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 				</ul>
 				&copy; Design By: <a href="#">Tech_Marketz</a>   
