--- a/Domestic Box Office Collection/dom_open_week.html
+++ b/Domestic Box Office Collection/dom_open_week.html
@@ -60,9 +60,9 @@
 				</div>
 				<table class="tab12">
 					<tr>
-						<th valign="middle" class="ww"><a href="#">Rank</a></th>
-						<th valign="middle" class="ww "><a href="#">Poster</a></th>
-						<th valign="middle" class="ww"><a href="#">Movie Name</a></th>
+						<th valign="middle" class="ww"><a href="">Rank</a></th>
+						<th valign="middle" class="ww "><a href="">Poster</a></th>
+						<th valign="middle" class="ww"><a href="">Movie Name</a></th>
 						<th valign="middle" class="ww"><a href="../calender.html">Release Date</a></th>
 						<th valign="middle" class="ww"><a href="../screen.html">No. of Screens</a></th>
 						<th valign="middle" class="ww"><a href="dom_open_week.html">Opening Week</a></th>
@@ -107,7 +107,7 @@
 				<div class="wrp">
 					<div class="row">
 						<div class="col">
-							<a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+							<a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
 										src="images/ramp.jpg" width='70' height='90' /></noscript><img
 									class="lazyloaded" src="../images/bahubali2.jpg" data-src="images/ramp.jpg" width="70"
 									height="90"></a>
@@ -117,7 +117,7 @@
 										class="sx">Bahubali 2 [Hindi]</b></a><br>
 								<a href="../calender.html"><b>Release Date:</a></b>&nbsp;&nbsp;28 Apr 2017<br>
 								<a href="../screen.html"><b>No. of Screens:</b></a>&nbsp;&nbsp;4200<br>
-								<a href="Domestic Box Office Collection/dom_open_week.html"><b>Opening
+								<a href="dom_open_week.html"><b>Opening
 										Week:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62 Cr
 							</p>
 						</div>
@@ -125,7 +125,7 @@
 					<hr>
 					<div class="row">
 						<div class="col">
-							<a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+							<a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
 										src="images/ramp.jpg" width='70' height='90' /></noscript><img
 									class="lazyloaded" src="../images/sultan.jpg" data-src="images/ramp.jpg" width="70"
 									height="90"></a>
@@ -134,7 +134,7 @@
 							<p class="sz"><b class="sx">2.</b>&nbsp;&nbsp;<a href="../detail.html"><b class="sx">Sultan</b></a><br>
 								<a href="../calender.html"><b>Release Date:</a></b>&nbsp;&nbsp;6 July 2016<br>
 								<a href="../screen.html"><b>No. of Screens:</b></a>&nbsp;&nbsp;4200<br>
-								<a href="Domestic Box Office Collection/dom_open_week.html"><b>Opening
+								<a href="dom_open_week.html"><b>Opening
 										Week:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62 Cr
 							</p>
 						</div>
@@ -142,7 +142,7 @@
 					<hr>
 					<div class="row">
 						<div class="col">
-							<a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+							<a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
 										src="images/ramp.jpg" width='70' height='90' /></noscript><img
 									class="lazyloaded" src="../images/tiger.jpg" data-src="images/ramp.jpg" width="70"
 									height="90"></a>
@@ -152,7 +152,7 @@
 										class="sx">Tiger Zinda Hai</b></a><br>
 								<a href="../calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;22 Dec 2017<br>
 								<a href="../screen.html"><b>No. of Screens:</b></a>&nbsp;&nbsp;4200<br>
-								<a href="Domestic Box Office Collection/dom_open_week.html"><b>Opening
+								<a href="dom_open_week.html"><b>Opening
 										Week:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62 Cr
 							</p>
 						</div>
@@ -160,7 +160,7 @@
 					<hr>
 					<div class="row">
 						<div class="col">
-							<a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+							<a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
 										src="images/ramp.jpg" width='70' height='90' /></noscript><img
 									class="lazyloaded" src="../images/simmba.jpg" data-src="images/ramp.jpg" width="70"
 									height="90"></a>
@@ -170,7 +170,7 @@
 										class="sx">War</b></a><br>
 								<a href="../calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;1 Jan 2021<br>
 								<a href="../screen.html"><b>No. of Screens:</b></a>&nbsp;&nbsp;4200<br>
-								<a href="Domestic Box Office Collection/dom_open_week.html"><b>Opening
+								<a href="dom_open_week.html"><b>Opening
 										Week:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62 Cr
 							</p>
 						</div>
@@ -215,6 +215,7 @@
 				<ul class="icons">
 					<li><a href="http://twitter.com/VivekChoubeyyy" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="https://www.facebook.com/iVivekChoubey" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="#" class="icon fa-youtube"><span class="label">Youtube</span></a></li>
 					<li><a href="http://instagram.com/vivekchoubeyy" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 				</ul>
 				&copy; Design By: <a href="#">Tech_Marketz</a>   
