--- a/Domestic Box Office Collection/dom_lifetime_gross.html
+++ b/Domestic Box Office Collection/dom_lifetime_gross.html
@@ -55,9 +55,9 @@
 						</div>
 						<table class="tab12">
 							<tr>
-								<th valign="middle" class="ww"><a href="#">Rank</a></th>
-								<th valign="middle" class="ww "><a href="#">Poster</a></th>
-								<th valign="middle" class="ww"><a href="#">Movie Name</a></th>
+								<th valign="middle" class="ww"><a href="">Rank</a></th>
+								<th valign="middle" class="ww "><a href="">Poster</a></th>
+								<th valign="middle" class="ww"><a href="">Movie Name</a></th>
 								<th valign="middle" class="ww"><a href="../calender.html">Release Date</a></th>
 								<th valign="middle" class="ww"><a href="dom_lifetime_gross.html">Lifetime Gross</a></th>
 								<th valign="middle" class="ww"><a href="../verdict.html">Verdict</a></th>
@@ -90,7 +90,7 @@
 						<div class="wrp">
 							<div class="row">
 								<div class="col">
-									<a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+									<a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
 												src="images/ramp.jpg" width='70' height='90' /></noscript><img
 											class="lazyloaded" src="../images/bahubali2.jpg" data-src="images/ramp.jpg" width="70"
 											height="90"></a>
@@ -107,7 +107,7 @@
 							<hr>
 							<div class="row">
 								<div class="col">
-									<a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+									<a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
 												src="images/ramp.jpg" width='70' height='90' /></noscript><img
 											class="lazyloaded" src="../images/dangal.jpg" data-src="images/ramp.jpg" width="70"
 											height="90"></a>
@@ -123,7 +123,7 @@
 							<hr>
 							<div class="row">
 								<div class="col">
-									<a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+									<a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
 												src="images/ramp.jpg" width='70' height='90' /></noscript><img
 											class="lazyloaded" src="../images/tiger.jpg" data-src="images/ramp.jpg" width="70"
 											height="90"></a>
@@ -140,7 +140,7 @@
 							<hr>
 							<div class="row">
 								<div class="col">
-									<a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+									<a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
 												src="images/ramp.jpg" width='70' height='90' /></noscript><img
 											class="lazyloaded" src="../images/simmba.jpg" data-src="images/ramp.jpg" width="70"
 											height="90"></a>
@@ -194,6 +194,7 @@
 					<ul class="icons">
 						<li><a href="http://twitter.com/VivekChoubeyyy" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://www.facebook.com/iVivekChoubey" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="#" class="icon fa-youtube"><span class="label">Youtube</span></a></li>		
 						<li><a href="http://instagram.com/vivekchoubeyy" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 					</ul>
 					&copy; Design By: <a href="#">Tech_Marketz</a>   
