--- a/Domestic Box Office Collection/dom_circuit.html
+++ b/Domestic Box Office Collection/dom_circuit.html
@@ -40,7 +40,7 @@
 				<hr>
 				<h3 class="gyb">Highest Circuit-Wise Nett Collection:</h3>
 				<hr class="gyb">
-				<h3>Highest Mumbai/Gujrat Nett Collection:</h3>
+				<h3>Highest Mumbai - Gujarat Nett Collection:</h3>
 				<div class="row">
 					<div class="col slt1 ss2">
 						<select name="year" class="addselect" id="year">
@@ -62,11 +62,11 @@
 				</div>
 				<table class="tab12">
 					<tr>
-						<th valign="middle" class="ww"><a href="#">Rank</a></th>
-						<th valign="middle" class="ww "><a href="#">Poster</a></th>
-						<th valign="middle" class="ww"><a href="#">Movie Name</a></th>
+						<th valign="middle" class="ww"><a href="">Rank</a></th>
+						<th valign="middle" class="ww "><a href="">Poster</a></th>
+						<th valign="middle" class="ww"><a href="">Movie Name</a></th>
 						<th valign="middle" class="ww"><a href="../calender.html">Release Date</a></th>
-						<th valign="middle" class="ww"><a href="dom_circuit.html">Mumbai/Gujrat</a></th>
+						<th valign="middle" class="ww"><a href="dom_circuit.html">Mumbai - Gujarat</a></th>
 						<th valign="middle" class="ww"><a href="dom_lifetime_nett.html">Lifetime Nett</a></th>
 					</tr>
 					<tr>
@@ -117,8 +117,8 @@
 						<div class="col">
 							<p class="sz"><b>1.</b>&nbsp;&nbsp;<a href="../detail.html"><b>Bahubali 2 [Hindi]</b></a><br>
 								<b>Release Date:</b><a href="../calender.html">&nbsp;&nbsp;2 Oct 2019<br></a>
-								<b>Mumbai/Gujrat:</b>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr<br>
-								<b>Nett Gross:</b>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr
+								<a href="dom_circuit.html"><b>Mumbai - Gujrat:</b></a>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr<br>
+								<a href="dom_lifetime_nett.html"><b>Lifetime Nett:</b></a>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr
 							</p>
 						</div>
 					</div><hr>
@@ -132,8 +132,8 @@
 						<div class="col">
 							<p class="sz"><b>2.</b>&nbsp;&nbsp;<a href="../detail.html"><b>Tanhaji</b></a><br>
 								<b>Release Date:</b><a href="../calender.html">&nbsp;&nbsp;10 Jan 2020<br></a>
-								<b>Mumbai/Gujrat:</b>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr<br>
-								<b>Nett Gross:</b>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr
+								<a href="dom_circuit.html"><b>Mumbai - Gujrat:</b></a>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr<br>
+								<a href="dom_lifetime_nett.html"><b>Lifetime Nett:</b></a>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr
 							</p>
 						</div>
 					</div><hr>
@@ -147,8 +147,8 @@
 						<div class="col">
 							<p class="sz"><b>3.</b>&nbsp;&nbsp;<a href="../detail.html"><b>Dangal</b></a><br>
 								<b>Release Date:</b><a href="../calender.html">&nbsp;&nbsp;23 Dec 2016<br></a>
-								<b>Mumbai/Gujrat:</b>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr<br>
-								<b>Nett Gross:</b>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr
+								<a href="dom_circuit.html"><b>Mumbai - Gujrat:</b></a>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr<br>
+								<a href="dom_lifetime_nett.html"><b>Lifetime Nett:</b></a>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr
 							</p>
 						</div>
 					</div><hr>
@@ -162,8 +162,8 @@
 						<div class="col">
 							<p class="sz"><b>4.</b>&nbsp;&nbsp;<a href="../detail.html"><b>Bahubali 2 [Hindi]</b></a><br>
 								<b>Release Date:</b><a href="../calender.html">&nbsp;&nbsp;2 Oct 2019<br></a>
-								<b>Mumbai/Gujrat:</b>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr<br>
-								<b>Nett Gross:</b>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr
+								<a href="dom_circuit.html"><b>Mumbai - Gujrat:</b></a>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr<br>
+								<a href="dom_lifetime_nett.html"><b>Lifetime Nett:</b></a>&nbsp;&nbsp; <span>&#8377;</span>&nbsp;185.76 Cr
 							</p>
 						</div>
 					</div><hr>
@@ -205,6 +205,7 @@
 				<ul class="icons">
 					<li><a href="http://twitter.com/VivekChoubeyyy" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="https://www.facebook.com/iVivekChoubey" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="#" class="icon fa-youtube"><span class="label">Youtube</span></a></li>
 					<li><a href="http://instagram.com/vivekchoubeyy" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 				</ul>
 				&copy; Design By: <a href="#">Tech_Marketz</a>   
