--- a/Domestic Box Office Collection/dom_open_day.html
+++ b/Domestic Box Office Collection/dom_open_day.html
@@ -38,7 +38,7 @@
 					<h2>Domestic Box Office Collection:</h2>
 				</a>
 				<hr>
-				<h3>Highest Opening Day Nett Collection:</h3>
+				<h3>Highest Opening Day Nett Collections:</h3>
 				<div class="row">
 					<div class="col slt ss2">
 						<select name="year" class="addselect" id="year">
