--- a/Domestic Box Office Collection/dom_open_weekend.html
+++ b/Domestic Box Office Collection/dom_open_weekend.html
@@ -38,7 +38,7 @@
 					<h2>Domestic Box Office Collection:</h2>
 				</a>
 				<hr>
-				<h3>Highest Opening Weekend Nett Collection:</h3>
+				<h3>Highest Opening Weekend Nett Collections:</h3>
 				<div class="row">
 					<div class="col slt2 ss2">
 						<select name="year" class="addselect" id="year">
