--- a/Domestic Box Office Collection/dom_lifetime_nett.html
+++ b/Domestic Box Office Collection/dom_lifetime_nett.html
@@ -33,7 +33,7 @@
 				<section class="wrapper style2">
 					<div class="inner">
                         <a href="../domestic.html"><h2>Domestic Box Office Collection:</h2></a><hr>
-						<h3>Highest Lifetime Nett Collection:</h3>
+						<h3>Highest Lifetime Nett Collections:</h3>
 						<div class="row">							
 							<div class="col slt ss2">
 								<select name="year" class="addselect" id="year">
