--- a/Domestic Box Office Collection/dom_week.html
+++ b/Domestic Box Office Collection/dom_week.html
@@ -38,256 +38,9 @@
 					<h2>Domestic Box Office Collection:</h2>
 				</a>
 				<hr>
-				<h3 class="gyb">Highest Week-Wise Nett Collection:</h3>
+				<h3 class="gyb">Highest Week-Wise Nett Collections:</h3>
 				<hr class="gyb">
-				<h3>Highest Opening Week Nett Collection:</h3>
-				<div class="row">
-					<div class="col slt1 ss2">
-						<select name="year" class="addselect" id="year">
-							<option value="2k21" class="l1"> Year</option>
-							<option value="2k21" class="l1"> 2021</option>
-							<option value="2k20" class="l1"> 2020</option>
-							<option value="2k19" class="l1"> 2019</option>
-							<option value="2k18" class="l1"> 2018</option>
-							<option value="2k17" class="l1"> 2017</option>
-							<option value="2k16" class="l1"> 2016</option>
-							<option value="2k15" class="l1"> 2015</option>
-							<option value="2k14" class="l1"> 2014</option>
-							<option value="2k13" class="l1"> 2013</option>
-							<option value="2k12" class="l1"> 2012</option>
-							<option value="2k11" class="l1"> 2011</option>
-							<option value="2k10" class="l1"> 2010</option>
-						</select><br>
-					</div>
-				</div>
-				<table class="tab12">
-					<tr>
-						<th valign="middle" class="ww"><a href="">Rank</a></th>
-						<th valign="middle" class="ww "><a href="">Poster</a></th>
-						<th valign="middle" class="ww"><a href="">Movie Name</a></th>
-						<th valign="middle" class="ww"><a href="../calender.html">Release Date</a></th>
-						<th valign="middle" class="ww"><a href="dom_week.html">Opening Week</a></th>
-						<th valign="middle" class="ww"><a href="dom_lifetime_nett.html">Lifetime Nett</a></th>
-					</tr>
-					<tr>
-						<td>1.</td>
-						<td><a href="../detail.html"
-								style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
-										src="../images/bahubali2.jpg" width='50' height='70' /></noscript><img
-									class=" lazyloaded" src="../images/bahubali2.jpg" data-src="../images/bahubali2.jpg"
-									width="50" height="70"></a></td>
-						<td><a href="../detail.html">Bahubali 2 [Hindi]</a></td>
-						<td>28 April 2017</td>
-						<td><span>&#8377;</span>&nbsp;246.47 Cr</td>
-						<td><span>&#8377;</span>&nbsp;510.36 Cr</td>
-					</tr>
-					<tr>
-						<td>2.</td>
-						<td><a href="../detail.html"
-								style="clear: left; float: left; margin-bottom: -1em; "><noscript><img
-										src="../images/sultan.jpg" width='50' height='70' /></noscript><img
-									class=" lazyloaded" src="../images/sultan.jpg" data-src="../images/sultan.jpg"
-									width="50" height="70"></a></td>
-						<td><a href="../detail.html">Sultan</a></td>
-						<td>6 July 2016</td>
-						<td><span>&#8377;</span>&nbsp;208.99 Cr</td>
-						<td><span>&#8377;</span>&nbsp;300.67 Cr</td>
-					</tr>
-					<tr>
-						<td>3.</td>
-						<td><a href="../detail.html"
-								style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
-										src="../images/tiger.jpg" width='50' height='70' /></noscript><img
-									class=" lazyloaded" src="../images/tiger.jpg" data-src="../images/tiger.jpg"
-									width="50" height="70"></a></td>
-						<td><a href="../detail.html">Tiger Zinda Hai</a></td>
-						<td>23 Dec 2016</td>
-						<td><span>&#8377;</span>&nbsp;104.26 Cr</td>
-						<td><span>&#8377;</span>&nbsp;387.29 Cr</td>
-					</tr>
-				</table>
-				<div class="wrp">
-					<div class="row">
-						<div class="col">
-							<a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
-										src="images/ramp.jpg" width='70' height='90' /></noscript><img
-									class="lazyloaded" src="../images/bahubali2.jpg" data-src="images/ramp.jpg"
-									width="70" height="90"></a>
-						</div>
-						<div class="col">
-							<p class="sz"><b class="sx">1.</b>&nbsp;&nbsp;<a href="../detail.html"><b
-										class="sx">Bahubali 2 [Hindi]</b></a><br>
-								<a href="../calender.html"><b>Release Date:</a></b>&nbsp;&nbsp;28 Apr 2017<br>
-								<a href="dom_week.html"><b>Opening
-										Week:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62 Cr<br>
-								<a href="dom_lifetime_nett.html"><b>Lifetime
-										Nett:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62 Cr
-							</p>
-						</div>
-					</div>
-					<hr>
-					<div class="row">
-						<div class="col">
-							<a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
-										src="images/ramp.jpg" width='70' height='90' /></noscript><img
-									class="lazyloaded" src="../images/sultan.jpg" data-src="images/ramp.jpg" width="70"
-									height="90"></a>
-						</div>
-						<div class="col">
-							<p class="sz"><b class="sx">2.</b>&nbsp;&nbsp;<a href="../detail.html"><b
-										class="sx">Sultan</b></a><br>
-								<a href="../calender.html"><b>Release Date:</a></b>&nbsp;&nbsp;6 July 2016<br>
-								<a href="dom_week.html"><b>Opening
-										Week:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62 Cr<br>
-								<a href="dom_lifetime_nett.html"><b>Lifetime
-										Nett:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62 Cr
-							</p>
-						</div>
-					</div>
-					<hr>
-					<div class="row">
-						<div class="col">
-							<a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
-										src="images/ramp.jpg" width='70' height='90' /></noscript><img
-									class="lazyloaded" src="../images/tiger.jpg" data-src="images/ramp.jpg" width="70"
-									height="90"></a>
-						</div>
-						<div class="col">
-							<p class="sz"><b class="sx">3.</b>&nbsp;&nbsp;<a href="../detail.html"><b class="sx">Tiger
-										Zinda Hai</b></a><br>
-								<a href="../calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;22 Dec 2017<br>
-								<a href="dom_week.html"><b>Opening
-										Week:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62 Cr<br>
-								<a href="dom_lifetime_nett.html"><b>Lifetime
-										Nett:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62 Cr
-							</p>
-						</div>
-					</div>
-					<hr>
-					<div class="row">
-						<div class="col">
-							<a href="../detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
-										src="images/ramp.jpg" width='70' height='90' /></noscript><img
-									class="lazyloaded" src="../images/simmba.jpg" data-src="images/ramp.jpg" width="70"
-									height="90"></a>
-						</div>
-						<div class="col">
-							<p class="sz"><b class="sx">4.</b>&nbsp;&nbsp;<a href="../detail.html"><b
-										class="sx">War</b></a><br>
-								<a href="../calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;1 Jan 2021<br>
-								<a href="dom_week.html"><b>Opening
-										Week:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62 Cr<br>
-								<a href="dom_lifetime_nett.html"><b>Lifetime
-										Nett:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;41.62 Cr
-							</p>
-						</div>
-					</div>
-					<hr>
-				</div>
-			</div>
-
-		</section>
-
-		<!-- Footer -->
-		<footer id="footer">
-			<div class="inner">
-				<div class="flex flex-3">
-					<div class="col">
-						<h3>Box Office </h3>
-						<ul class="alt">
-							<li><a href="#">Magazine</a></li>
-							<li><a href="#">Numbers</a></li>
-							<li><a href="#">Movie Calender</a></li>
-							<li><a href="#">Subscribe</a></li>
-						</ul>
-					</div>
-					<div class="col">
-						<h3>Topics</h3>
-						<ul class="alt">
-							<li><a href="#">From the Magazine</a></li>
-							<li><a href="#">Tracking & Forecasts</a></li>
-							<li><a href="#">Numbers</a></li>
-						</ul>
-					</div>
-					<div class="col">
-						<h3>Company</h3>
-						<ul class="alt">
-							<li><a href="#">Terms & Conditions</a></li>
-							<li><a href="#">Privacy Policy</a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-			<div class="copyright">
-				<ul class="icons">
-					<li><a href="http://twitter.com/VivekChoubeyyy" class="icon fa-twitter"><span
-								class="label">Twitter</span></a></li>
-					<li><a href="https://www.facebook.com/iVivekChoubey" class="icon fa-facebook"><span
-								class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon fa-youtube"><span class="label">Youtube</span></a></li>
-
-								<li><a href="http://instagram.com/vivekchoubeyy" class="icon fa-instagram"><span
-								class="label">Instagram</span></a></li>
-				</ul>
-				&copy; Design By: <a href="#">Tech_Marketz</a>
-			</div>
-		</footer>
-
-		<!-- Scripts -->
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-			integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-			crossorigin="anonymous"></script>
-		<script src="../assets/js/jquery.min.js"></script>
-		<script src="../assets/js/jquery.scrolly.min.js"></script>
-		<script src="../assets/js/skel.min.js"></script>
-		<script src="../assets/js/util.js"></script>
-		<script src="../assets/js/main.js"></script>
-
-</body>
-
-</html><!DOCTYPE HTML>
-<!--
-	Broadcast by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
-<html>
-
-<head>
-	<title>Film - Stats: Highest Week-Wise Collection</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<link rel="stylesheet" href="../assets/css/main.css" />
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
-
-<body>
-
-	<!-- Header -->
-	<header id="header">
-		<h1><a href="../index.html">Vivek Choubey <span>Film - Stats</span></a></h1>
-		<a href="#menu">Menu</a>
-	</header>
-
-	<!-- Nav -->
-	<nav id="menu">
-		<ul class="links">
-			<li><a href="../index.html">Home</a></li>
-			<li><a href="../about.html">About Us </a></li>
-			<li><a href="../login.html">Login/Register</a></li>
-		</ul>
-	</nav>
-	<div id="main">
-		<!-- Two -->
-		<section class="wrapper style2">
-			<div class="inner">
-				<a href="../domestic.html">
-					<h2>Domestic Box Office Collection:</h2>
-				</a>
-				<hr>
-				<h3 class="gyb">Highest Week-Wise Nett Collection:</h3>
-				<hr class="gyb">
-				<h3>Highest Opening Week Nett Collection:</h3>
+				<h3>Highest Opening Week Nett Collections:</h3>
 				<div class="row">
 					<div class="col slt1 ss2">
 						<select name="year" class="addselect" id="year">
